package com.userservice.entity;

public enum TaskStatus {
    TODO,
    IN_PROGRESS,
    DONE
}
